--- a/package.json
+++ b/package.json
@@ -1,5 +1,21 @@
 {
+  "name": "react-project",
+  "version": "1.0.0",
+  "description": "A React project",
+  "scripts": {
+    "start": "parcel index.html",
+    "build": "parcel build index.html",
+    "test": "jest"
+  },
+  "keywords": [
+    "react",
+    "parcel"
+  ],
+  "author": "abhay13901",
+  "license": "ISC",
   "devDependencies": {
+    "@babel/core": "^7.25.2",
+    "babel-plugin-transform-remove-console": "^6.9.4",
     "parcel": "^2.12.0",
     "process": "^0.11.10"
   },
@@ -8,7 +24,7 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1"
   },
-  "browserlist": [
+  "browserslist": [
     "defaults"
   ]
 }
