--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "@babel/core": "^7.25.2",
     "babel-plugin-transform-remove-console": "^6.9.4",
     "parcel": "^2.12.0",
-    "process": "^0.11.10"
+    "process": "^0.11.10",
+    "tailwindcss": "^3.4.14"
   },
   "dependencies": {
     "browserlist": "^1.0.1",
