--- a/package.json
+++ b/package.json
@@ -15,13 +15,16 @@
   "license": "ISC",
   "devDependencies": {
     "@babel/core": "^7.25.2",
+    "@parcel/transformer-postcss": "^2.12.0",
     "babel-plugin-transform-remove-console": "^6.9.4",
     "parcel": "^2.12.0",
+    "postcss": "^8.4.47",
     "process": "^0.11.10",
     "tailwindcss": "^3.4.14"
   },
   "dependencies": {
     "browserlist": "^1.0.1",
+    "dotenv": "^16.4.5",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-router-dom": "^6.27.0"
